# OpenSEO

./: .gitignore  CONTRIBUTING.md  HOW_TO_USE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: python-package.yml
prompts/: audit.md  content.md  image_alt.md  keywords.md  schema.md  site_summary.md  technical.md
src/openseo/: __init__.py  app.py  cli.py
src/openseo/analyzers/: __init__.py  content.py  duplicates.py  headings.py  images.py  link_graph.py  links.py  meta.py  qrg.py  schema_analyzer.py  technical.py  title.py
src/openseo/cache/: __init__.py  store.py
src/openseo/commands/: __init__.py  audit.py  config_cmd.py  content.py  doctor.py  drift.py  init.py  keywords.py  provider.py  robots.py  schema.py  sitemap.py
src/openseo/config/: __init__.py  manager.py  schema.py
src/openseo/constants/: __init__.py
src/openseo/crawler/: __init__.py  base.py  extractor.py  http.py  playwright_crawler.py  site_crawler.py
src/openseo/exceptions/: __init__.py
src/openseo/models/: __init__.py  issue.py  page.py  result.py  site.py
src/openseo/outputs/: __init__.py  base.py  json_renderer.py  markdown.py  pdf.py  terminal.py
src/openseo/plugins/: __init__.py  loader.py  registry.py
src/openseo/prompts/: __init__.py  loader.py  manager.py
src/openseo/providers/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  groq.py  litellm_provider.py  ollama.py  openai.py  openrouter.py  registry.py
src/openseo/services/: __init__.py  drift_store.py  llm.py
tests/integration/: test_commands.py
tests/unit/: test_analyzers.py  test_config.py  test_drift.py  test_models.py  test_pdf.py  test_providers.py  test_qrg.py  test_site_crawler.py
