[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openseo"
version = "0.1.0"
description = "Production-quality CLI for SEO analysis powered by any LLM provider"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OpenSEO Contributors", email = "hello@openseo.dev" }]
keywords = ["seo", "cli", "llm", "ai", "openai", "anthropic", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "litellm==1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "click>=8.1.7",
    "reportlab>=4.1.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44.0"]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.10.0",
    "ruff>=0.4.8",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0.12",
    "types-aiofiles>=23.2.0",
    "httpx>=0.27.0",
]
all = ["openseo[playwright,dev]"]

[project.scripts]
seo = "openseo.cli:main"

[project.urls]
Homepage = "https://github.com/openseo/openseo"
Documentation = "https://openseo.dev/docs"
Repository = "https://github.com/openseo/openseo"
Issues = "https://github.com/openseo/openseo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openseo"]

[tool.hatch.build.targets.sdist]
include = ["src/", "prompts/", "README.md", "LICENSE", "CONTRIBUTING.md", "ROADMAP.md"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = ["B008", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S"]
"src/openseo/commands/**" = ["B006"]

[tool.ruff.lint.isort]
known-first-party = ["openseo"]

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
ignore_missing_imports = true
mypy_path = "src"

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/openseo",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.coverage.run]
source = ["src/openseo"]
omit = ["*/__init__.py", "*/telemetry/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
